--- a/FrontEnd/day30/package.json
+++ b/FrontEnd/day30/package.json
@@ -2,6 +2,7 @@
   "name": "day30",
   "version": "0.1.0",
   "private": true,
+  "homepage": "./",
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.1",
     "@testing-library/jest-dom": "^4.2.4",
@@ -14,7 +15,8 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "sass": "^1.38.0"
   },
   "scripts": {
     "start": "react-scripts start",
